# STE_pi

./: CMakeLists.txt  NMEA File to TRT file conversion.py  README.md
cmake/: NSIS.template.in  PluginInstall.cmake
src/: STE_Dialog.cpp  STE_Dialog.h  STE_pi.cpp  STE_pi.h  icons.cpp  icons.h  mathplot.h
